--- a/client/public/index.html
+++ b/client/public/index.html
@@ -31,9 +31,8 @@
     <title>React App</title>
   </head>
   <body>
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
+    <noscript> You need to enable JavaScript to run this app. </noscript>hey I
+    am here I am working , its react app that is not working
     <div id="root"></div>
     <!--
       This HTML file is a template.
