--- a/client/public/index.html
+++ b/client/public/index.html
@@ -31,8 +31,7 @@
     <title>React App</title>
   </head>
   <body>
-    <noscript> You need to enable JavaScript to run this app. </noscript>hey I
-    am here I am working , its react app that is not working
+    <noscript> You need to enable JavaScript to run this app. </noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
