--- a/client/public/index.html
+++ b/client/public/index.html
@@ -32,6 +32,12 @@
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores modi,
+      minima necessitatibus dolorem deleniti nihil deserunt quod suscipit sunt,
+      tempore perferendis corporis distinctio cumque assumenda, voluptas amet
+      ratione doloribus blanditiis.
+    </p>
     <div id="root"></div>
     <!--
       This HTML file is a template.
